bug de tela romevido

--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body,
 	justify-content: center;
 	align-items: center;
 
-	max-width: 90vw;
+	max-width: 100%;
 	height: 100vh;
 	font: 6rem 'Comfortaa', cursive; 
 }
